--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
             <div class="desc">
         
              <div class="desc_item">
-               <h2>UX/UI Desing </h2>
+               <h2>UX/UI Design </h2>
                <br>
                <p>I've worked with team of deferent<br>sizes to study user bahaviour and<br>use the empathy to create best<br>experience</p>
               </div>
         
               <div class="desc_item">
-                <h2>Web Desing</h2>
+                <h2>Web Design</h2>
                 <br>
                 <p>The web has grown to be what we<br> see almost everyday.I jointed the<br style="text-align: center;">community just so I can bring in<br> more people </p>
              </div>
