--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         </div>
         <section>
             <div class="box">
+                <div class="box_item">
                 <h2>Designing With passion while<br> exploring the World</h2>
                 <p>
                     <br>
@@ -39,12 +40,15 @@
                     inexperieced professionals.
                     <br>
                 </p>
-                <h3>
-                    Any Type of Query & Discussion. <br>
-                    Prompt me<br> 
-                    raphael@instincthub.com
-                </h3>
-
+                </div>
+                <div class="box_item">
+                    <h2>
+                        Any Type of Query & Discussion. <br>
+                        Prompt me<br>
+                        <br> 
+                        raphael@instincthub.com
+                    </h2>
+                </div>  
             </div>
         </section>
         <header><!-- Header -->
